--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <!-- Asadbek start -->
+  <!-- Asadbek end -->
+
+  <!-- Demir start -->
+  <!-- Demir end -->
+
+  <!-- NurMuhammad start -->
+  <!-- NurMuhammad end -->
+
+  <!-- Mirjalol start -->
+  <!-- Mirjalol end -->
 </body>
 </html>
