--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,79 @@
 </head>
 <body>
   <!-- Asadbek start -->
+  <header class="w-full h-16 bg-white shadow">
+    <nav class="flex justify-between items-center px-8 py-4 max-w-6xl mx-auto">
+      <div class="flex items-center space-x-2">
+        <img src="../images/logo.png" alt="" class="h-8">
+        <h1 class="text-xl font-semibold">Product</h1>
+      </div>
+      <ul class="hidden md:flex items-center space-x-8">
+        <li><a href="#" class="text-gray-800 hover:text-teal-600">Product</a></li>
+        <li><a href="#" class="text-gray-800 hover:text-teal-600">Customers</a></li>
+        <li><a href="#" class="text-gray-800 hover:text-teal-600">Pricing</a></li>
+        <li><a href="#" class="text-gray-800 hover:text-teal-600">Resources</a></li>
+        <li><a href="#"><button class="px-4 py-2 border-2 border-teal-600 text-teal-600 rounded hover:bg-teal-600 hover:text-white transition">Sign In</button></a></li>
+        <li><a href="#"><button class="px-4 py-2 bg-teal-600 text-white rounded hover:bg-transparent hover:text-teal-600 border-2 border-teal-600 transition">Sign Up</button></a></li>
+        <li><i class="fa-solid fa-circle-half-stroke text-xl text-gray-800 cursor-pointer"></i></li>
+      </ul>
+      <div class="md:hidden">
+        <i class="fa-solid fa-bars text-xl cursor-pointer"></i>
+      </div>
+    </nav>
+  </header>
+  <main class="max-w-6xl mx-auto px-8 py-16">
+    <section id="home" class="flex flex-col md:flex-row items-center justify-between space-y-8 md:space-y-0 md:space-x-12">
+      <div class="flex flex-col space-y-6">
+        <h1 class="text-4xl font-bold">Work at the speed of thought</h1>
+        <p class="text-gray-700">Tools, tutorials, design, and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+        <div class="flex space-x-4">
+          <button class="px-6 py-3 bg-teal-600 text-white rounded hover:bg-transparent hover:text-teal-600 border-2 border-teal-600 transition">Get started</button>
+          <a href="#" class="flex items-center space-x-2 text-teal-600 hover:underline">
+            <i class="fa-solid fa-play"></i>
+            <span>Watch the video</span>
+          </a>
+        </div>
+      </div>
+      <div>
+        <img src="../images/home-main.png" alt="" class="w-full h-auto">
+      </div>
+    </section>
+  
+    <section id="about" class="text-center py-16 space-y-12">
+      <h1 class="text-3xl font-bold">Product was Built Specifically for You</h1>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="flex flex-col items-center space-y-4">
+          <div class="w-12 h-12 bg-teal-600 text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-arrow-pointer"></i>
+          </div>
+          <h2 class="text-xl font-semibold">First click tests</h2>
+          <p class="text-gray-700">While most people enjoy casino gambling.</p>
+        </div>
+        <div class="flex flex-col items-center space-y-4">
+          <div class="w-12 h-12 bg-blue-500 text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-link"></i>
+          </div>
+          <h2 class="text-xl font-semibold">First click tests</h2>
+          <p class="text-gray-700">While most people enjoy casino gambling.</p>
+        </div>
+        <div class="flex flex-col items-center space-y-4">
+          <div class="w-12 h-12 bg-purple-700 text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <h2 class="text-xl font-semibold">First click tests</h2>
+          <p class="text-gray-700">While most people enjoy casino gambling.</p>
+        </div>
+        <div class="flex flex-col items-center space-y-4">
+          <div class="w-12 h-12 bg-red-500 text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-hourglass-start"></i>
+          </div>
+          <h2 class="text-xl font-semibold">First click tests</h2>
+          <p class="text-gray-700">While most people enjoy casino gambling.</p>
+        </div>
+      </div>
+      <button class="px-6 py-3 bg-teal-600 text-white rounded hover:bg-transparent hover:text-teal-600 border-2 border-teal-600 transition">Sign Up Now</button>
+    </section>
+  </main>
   <!-- Asadbek end -->
 
   <!-- Demir start -->
