Demir section tugatildi

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,51 @@
   <!-- Asadbek end -->
 
   <!-- Demir start -->
+  <section id="management" class="w-full py-12 px-16 flex justify-between items-center gap-24">
+    <div class="management-info flex flex-col items-start gap-5">
+      <h4 class="text-lg font-medium">Effortless Validation for</h4>
+      <h1 class="text-4xl font-bold">Management</h1>
+      <p class="text-gray-700">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+      <h5 class="text-xl font-semibold">Accessory makers</h5>
+      <p class="text-gray-700">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+      <h5 class="text-xl font-semibold">Alterationists</h5>
+      <p class="text-gray-700">If you are looking for a new way to promote your business that won’t cost you more money,</p>
+    </div>
+    <div class="management-img">
+      <img src="../images/managment.png" alt="">
+    </div>
+  </section>
+  
+  <section id="customer-support" class="w-full py-12 px-16 flex justify-between items-center gap-24">
+    <div class="customer-support-img">
+      <img src="../images/managment.png" alt="">
+    </div>
+    <div class="customer-support-info flex flex-col items-start gap-5">
+      <h4 class="text-lg font-medium">Easier decision making for</h4>
+      <h1 class="text-4xl font-bold">Customer Support</h1>
+      <p class="text-gray-700">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+      <ul class="flex flex-col gap-2">
+        <li class="flex items-center gap-3"><i class="fa-solid fa-check bg-teal-600 text-white w-8 h-8 flex justify-center items-center rounded-md"></i>Personal choices</li>
+        <li class="flex items-center gap-3"><i class="fa-solid fa-check bg-teal-600 text-white w-8 h-8 flex justify-center items-center rounded-md"></i>Public speaking</li>
+        <li class="flex items-center gap-3"><i class="fa-solid fa-check bg-teal-600 text-white w-8 h-8 flex justify-center items-center rounded-md"></i>Customer service</li>
+      </ul>
+    </div>
+  </section>
+  
+  <section id="collobrative" class="w-full py-12 px-16 flex justify-between items-center gap-24">
+    <div class="collobrative-info flex flex-col items-start gap-5">
+      <h4 class="text-lg font-medium">Effortless Validation for</h4>
+      <h1 class="text-4xl font-bold">Collobrative</h1>
+      <p class="text-gray-700">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+      <h5 class="text-xl font-semibold">Accessory makers</h5>
+      <p class="text-gray-700">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+      <h5 class="text-xl font-semibold">Alterationists</h5>
+      <p class="text-gray-700">If you are looking for a new way to promote your business that won’t cost you more money,</p>
+    </div>
+    <div class="collobrative-img">
+      <img src="../images/managment.png" alt="">
+    </div>
+  </section>
   <!-- Demir end -->
 
   <!-- NurMuhammad start -->
